welcome.lessons.welcome.array.island.Island.scala.error
island:26: error: '(' expected but '{' found.
	} else if {
                  ^island:31: error: illegal start of simple expression
}
^